# app

./: .gitignore  CMakeLists.txt  LICENSE  README.md
PlayDirect/: CMakeLists.txt  main.cpp
PlayDirect/src/networking/: session.cpp  webSocket.cpp  winsock.cpp
TalkDirect/: CMakeLists.txt  main.cpp
TalkDirect/src/gui/: CMakeLists.txt  app.cpp  customEvents.cpp  frame.cpp  panel.cpp  sessionChatPanel.cpp  sessionHostPanel.cpp  sessionManager.cpp
TalkDirect/src/networking/: CMakeLists.txt  session.cpp  webSocket.cpp  winsock.cpp
TalkDirect/src/video/: CMakeLists.txt  video.cpp  winScreenCap.cpp
ext/sdl/: sdl2-config.cmake
include/gui/: app.hpp  customEvents.hpp  frame.hpp  panel.hpp  sessionChatPanel.hpp  sessionHostPanel.hpp  sessionManager.hpp
include/networking/: networkQueue.hpp  session.hpp  webSocket.hpp  winsock.hpp
include/video/: video.hpp  winScreenCap.hpp
src/: main.cpp
src/headers/: structs.h
